# museic

./: .gitignore  README.md  io.github.drvonmiau.Lyre.json  io.github.drvonmiau.Museic.json  meson.build
.github/workflows/: bundle.yml  flatpak-repo.yml
data/: io.github.drvonmiau.Lyre.desktop.in  io.github.drvonmiau.Lyre.gschema.xml  io.github.drvonmiau.Lyre.metainfo.xml.in  io.github.drvonmiau.Museic.desktop.in  io.github.drvonmiau.Museic.gschema.xml  io.github.drvonmiau.Museic.metainfo.xml.in  meson.build
data/icons/: meson.build
design/: README.md
design/chats/: chat1.md
design/project/: Music Player (standalone).html  Music Player - export.html  Music Player.dc.html
docs/: DISTRIBUTION.md
po/: POTFILES  meson.build
src/: library.py  lyre.gresource.xml  lyre.in  main.py  meson.build  metadata.py  models.py  mpris.py  museic.gresource.xml  museic.in  player.py  style.css  widgets.py  window.py  window.ui
src/gtk/: help-overlay.ui
